--- a/Portal.API/Portal.API.csproj
+++ b/Portal.API/Portal.API.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9"/>
   </ItemGroup>
 </Project>
