--- a/Portal.API/Portal.API.csproj
+++ b/Portal.API/Portal.API.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1"/>
   </ItemGroup>
 </Project>
