--- a/Portal.API/appsettings.json
+++ b/Portal.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClaudinarySettings":{
+    "CloudName": "dojpyxyeq",
+    "ApiKey": "159353768321756",
+    "ApiSecret": "I9PkNS4GJACuwhrLdrrZdiPc3as"
+  }
 }
