--- a/PortalFrontend/angular.json
+++ b/PortalFrontend/angular.json
@@ -28,7 +28,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/alertifyjs/build/alertify.min.js"
+              "node_modules/alertifyjs/build/alertify.min.js",
+              "src/script.js"
             ]
           },
           "configurations": {
@@ -93,7 +94,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/script.js"
+            ]
           }
         },
         "lint": {
