--- a/Portal.API/appsettings.json
+++ b/Portal.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token":"Nasz sekretny klucz"
   },
   "ConnectionStrings":{
-    "DefaultConnection": "Data Source = Portal.db"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
