--- a/Portal.API/appsettings.Development.json
+++ b/Portal.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+   "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=pearpair;Uid=pearpair; Pwd=dbswemko7711"
   }
 }
