--- a/Portal.API/appsettings.json
+++ b/Portal.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token":"Nasz sekretny klucz"
   },
   "ConnectionStrings":{
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost; Database=pearpair;Uid=pearpair; Pwd=dbswemko7711"
   },
   "Logging": {
     "LogLevel": {
